--- a/pages/style_pages.css
+++ b/pages/style_pages.css
@@ -37,6 +37,7 @@
     gap: 10px;
     flex-wrap: wrap; /* Responsivo */
     margin-top: 10px;
+    margin-left: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -50,9 +51,9 @@
 }
 
 .movie_infos{
+    display: flex;
     background-color: var(--second_color);
     border-radius: 10px;
-    display: flex;
     justify-content: space-around;
     flex-direction: column;      
     align-items: center;
