--- a/pages/style_pages.css
+++ b/pages/style_pages.css
@@ -16,7 +16,14 @@
     margin-top: 10px;
     border-radius: 8px;
     box-shadow: 0 5px 30px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
+
+.banner img:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 10px 40px rgba(0, 0, 0, 0.3); /* realça mais a imagem */
+}
+
 
 .txt_content{
     margin: 10px;
