--- a/pages/style_pages.css
+++ b/pages/style_pages.css
@@ -33,7 +33,6 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-
 }
 
 .assessment_movie {
@@ -48,6 +47,11 @@
     margin-top: 10px;
     margin-left: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.assessment_movie:hover{
+    box-shadow: 0 10px 55px var(--four_color);
 }
 
 .rating {
@@ -72,4 +76,12 @@
     margin-top: 10px;
     margin-left: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+
+}
+
+.movie_infos:hover{
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    box-shadow: 0 10px 55px var(--four_color);
+
 }
