--- a/pages/account/accont_style.css
+++ b/pages/account/accont_style.css
@@ -10,12 +10,21 @@
     text-align: center;
     gap: 10px;
     margin-top: 30px;
+    background-color: var(--three_color);
+    border-radius: 5px;
+    width: 35%;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 .account p{
     display: flex;
     justify-content: center;
     text-align: center;
+}
+
+.account_content{
+    margin: 50px;
 }
 
 .icon_user{
@@ -42,7 +51,8 @@
 
 .plano:hover {
     transform: translateY(-10px); /* Muda o Y com O Hover*/
-    box-shadow: 0 10px 40px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 10px 35px #07206d ;
+
 }
 
 .plano img {
