--- a/pages/account/accont_style.css
+++ b/pages/account/accont_style.css
@@ -43,7 +43,7 @@
     align-items: center;
     margin: 0 auto;
     border-radius: 10px;
-    width: 500px;
+    width: auto;
     /* border: 1px solid; */
     background-color: var(--three_color);
     transition: transform 0.3s ease, box-shadow 0.3s ease; 
@@ -60,5 +60,6 @@
     margin-right: 10px;
     margin-left: 10px;
     margin-right: 10px;
-    width: 480px;
+    margin: 0 auto;
+    width: 380px;
 }
