Fix Paths of css and create var.css

--- a/css/about_me_sytle.css
+++ b/css/about_me_sytle.css
@@ -1,3 +1,5 @@
+@import url("../css/var.css");
+
 .about_me{
     justify-content: center;
     align-items: center;
@@ -112,12 +114,13 @@
     border-radius: 8px;
     border: cyan 5px;
     background: transparent;
-    filter: blur(0.3px);
+    filter: blur(0.4px);
     box-shadow: 0 5px 15px rgba(5, 172, 244, 0.2);
     padding: 1px 2px;
     height: min-content;
+    width: min-content;
+    min-width: 4%;
     display: flex;
-    width: 4.5%;
     text-align: center;
     justify-content: center;
     flex-direction: column;
@@ -128,4 +131,5 @@
 
 .linguage p{
     margin: 1mm;
+    min-width: 4.5%;
 }
