--- a/css/accont_style.css
+++ b/css/accont_style.css
@@ -1,4 +1,5 @@
 @import url("../css/var.css");
+@import url("../css/style.css");
 
 .body{
     margin: 0 auto;
@@ -46,7 +47,6 @@
     margin: 0 auto;
     border-radius: 10px;
     width: auto;
-    /* border: 1px solid; */
     background-color: var(--three_color);
     transition: transform 0.3s ease, box-shadow 0.3s ease; 
 }
